# Miku-Bot

./: .env-docker  .gitignore  .gitpod.yml  Makefile  Pipfile  README.md  contributing.md  docker-compose-example.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker-build-ghcr.yml  docker-build-hub.yml  snyk.yml
Alpine-Docker/: Dockerfile  start.sh
Bot/: miku.py
Bot/Cogs/: anilist.py  avatar.py  chat.py  disquest-postgres.py  disquest.py  events.py  events_task.py  global.py  gws.py  help.py  images.py  info.py  invitation.py  invite.py  jisho.py  mangadex.py  qrcode-maker.py  qrcode.py  reddit.py  tenor.py  translate.py  uptime.py  uwu.py  waifu-generator.py  waifu.py
Bot/exceptions/: __init__.py  main.py
Bot/genshin_wish_sim_utils/: __init__.py  wish.py  ws_user_inv.py  ws_users.py
Bot/miku_config_utils/: model.py
Bot/miku_events_utils/: __init__.py  main.py
Debian-Docker/: Dockerfile
Scripts/: database-init.py  events-init.py  postgres-init.py
Ubuntu-Docker/: Dockerfile
WS-Data/: ws_data.sql
