[tool.poetry]
name = "Miku"
version = "0.1.0"
description = "A Continuation of Isaac-To's Miku Discord Bot"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {version = "2.0.0rc1", extras = ["voice"]}
python-dotenv = "^0.20.0"
aiodns = "^3.0.0"
Brotli = "^1.0.9"
SQLAlchemy = "^1.4.36"
orjson = "^3.6.8"
lxml = "^4.8.0"
asyncpraw = "^7.5.0"
asyncpg = "^0.25.0"
uvloop = "^0.16.0"
qrcode = {extras = ["qil"], version = "^7.3.1"}
cchardet = "^2.1.7"
beautifulsoup4 = "^4.11.1"
pysimdjson = "^4.0.3"
gpytranslate = "^1.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
