[tool.poetry]
name = "Miku"
version = "0.1.0"
description = "A Multipurpose bot foucsed on simplicity, speed and efficiency."
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {version = "2.3.2", extras = ["voice"]}
python-dotenv = "*"
aiodns = "*"
Brotli = "*"
SQLAlchemy = "*"
orjson = "*"
lxml = "*"
asyncpraw = "*"
asyncpg = "*"
uvloop = "*"
qrcode = {extras = ["qil"], version = "*"}
cchardet = "*"
beautifulsoup4 = "*"
pysimdjson = "*"
disquest-utils = "*"
gql = {extras = ["aiohttp"], version = "*"}
rin-exceptions = "*"
python-dateutil = "^2.8.2"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
